--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
             <a class="nav-link scroll-link" href="#about">About Us</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link scroll-link" href="#about">others</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link scroll-link" href="#tournament">Tournament</a>
           </li>
           <li class="nav-item">
